--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "virtual-green-education",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://piyushx7-cmd.github.io/virtualgreeneduu/",
+  "homepage": "https://piyushx7-cmd.github.io/idtproject",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -44,3 +44,4 @@
     "gh-pages": "^6.3.0"
   }
 }
+
